Letter-spacing fix

--- a/assets/style.css
+++ b/assets/style.css
@@ -10,6 +10,7 @@ body {
 
 p {
     line-height: 1.4em;
+    letter-spacing: .5px;
 }
 
 h1,
@@ -48,10 +49,12 @@ a:hover {
 ol,
 ul {
     margin-left: -2.1em;
+    letter-spacing: .5px;
 }
 
 li {
     margin: 0 0 0.5em 0;
+    letter-spacing: .5px;
 }
 
 main {
